--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
   flutter_staggered_animations: ^1.1.1
+  stylish_bottom_bar: ^1.1.0
 
 dev_dependencies:
   flutter_test:
