cart order address succefull order pages completed , linked with the data base for dynamic ui + some custom modification in the custom modificaton widgets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_staggered_animations: ^1.1.1
   stylish_bottom_bar: ^1.1.0
+  sqflite: ^2.4.1
+  path_provider: ^2.1.2 # Required for database path
+  conditional_builder_null_safety: ^0.0.6
 
 dev_dependencies:
   flutter_test:
